--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -28,3 +28,37 @@ body {
      -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
 }
+
+article {
+	display: block;
+}
+
+.home {
+list-style-type: none;
+}
+
+.home li{
+	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+	line-height: 1.33333;
+	margin-bottom: 0;
+	padding: 8px 0;
+}
+
+.home .entry-date{
+	display: inline;
+    line-height: 1.71429;
+    margin-bottom: 0;
+    text-transform: uppercase;
+}
+
+.home .excerpt{
+	display: block;
+    float: none;
+    font-size: 0.875rem;
+    line-height: 1.14286;
+    margin-bottom: 0;
+}
+
+.home a >span{
+	float:right;
+}
