--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -10,7 +10,9 @@
       </div>
     </div>
   </div>
-
+      <div class="clearfix"></div>
+        {% include social_links.html %}
+    </div>
   {% include footer.html %}
 </body>
 </html>
