--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -63,3 +63,15 @@ list-style-type: none;
 .home a >span{
 	float:right;
 }
+.title {
+  margin-top: 1rem; 
+}
+.author {
+  color: #7a7a7a;
+  font-size: 0.75rem;
+  margin-left: 2rem;
+}
+.journal {
+  font-size: 0.75rem;
+  margin-left: 2rem; 
+}
