--- a/_sass/basscss/_base-typography.scss
+++ b/_sass/basscss/_base-typography.scss
@@ -15,7 +15,8 @@ h6 {
   font-family: $heading-font-family;
   font-weight: $heading-font-weight;
   line-height: $heading-line-height;
-  margin-top: 1em;
+  /*margin-top: 1em;*/
+  margin-top:0;
   margin-bottom: .5em;
 }
 
