add post and style adjustment

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -54,6 +54,7 @@ list-style-type: none;
 
 .home .excerpt{
 	display: block;
+	width: 80%;
     float: none;
     font-size: 0.7rem;
     line-height: 1.14286;
