--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -10,10 +10,11 @@
   -moz-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
   background: #fafafa;
-  border-radius: 0.1875em;
+  border-radius: 0.2em;
   border: 1px solid #f3f3f3;
-  color: #333333;
+  color: #1864CE;
   padding: 1em 1.5em;
+  font-weight: bold;
 }
 
 .pagination .disabled {
