--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -2,19 +2,19 @@
   <div class="left">
     {% if paginator.previous_page %}
       {% if paginator.page == 2 %}
-        <a class="pagination-item" href="{{ site.baseurl }}/">Newer</a>
+        <a class="pagination-item" href="{{ site.baseurl }}/archives/">< Previous</a>
       {% else %}
-        <a class="pagination-item" href="{{ site.baseurl }}/page{{paginator.previous_page}}/">Newer</a>
+        <a class="pagination-item" href="{{ site.baseurl }}/archives/page-{{paginator.previous_page}}/">< Previous</a>
       {% endif %}
     {% else %}
-      <span class="pagination-item disabled">Newer</span>
+      <span class="pagination-item disabled">< Previous</span>
     {% endif %}
   </div>
   <div class="right">
     {% if paginator.next_page %}
-      <a class="pagination-item" href="{{ site.baseurl }}/page{{paginator.next_page}}/">Older</a>
+      <a class="pagination-item" href="{{ site.baseurl }}/archives/page-{{paginator.next_page}}/">Next ></a>
     {% else %}
-      <span class="pagination-item disabled">Older</span>
+      <span class="pagination-item disabled">Next ></span>
     {% endif %}
   </div>
 </div>
