--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,12 +11,13 @@
 	<meta name="msvalidate.01" content="AAF1839A763BCBD427E1038B41C34028" />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ "/css/pixyll.css" | prepend: site.baseurl }}?{{ site.time | date: "%Y%m%d%H%M" }}" type="text/css">
+    <link rel="stylesheet" href="{{ "/css/doanguyen.css" | prepend: site.baseurl }}?{{ site.time | date: "%Y%m%d%H%M" }}" type="text/css">
 
     <!-- Fonts 
     <link href='//fonts.googleapis.com/css?family=Merriweather:900,900italic,300,300italic' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Lato:900,300' rel='stylesheet' type='text/css'>-->
-	<link href='//fonts.googleapis.com/css?family=Noto+Serif:400&subset=latin,vietnamese' rel='stylesheet' type='text/css'>
+	<!-- <link href='//fonts.googleapis.com/css?family=Noto+Serif:400,400i&subset=latin,vietnamese' rel='stylesheet' type='text/css'> -->
+    <link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC|Quicksand:300,400&amp;subset=vietnamese" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="//npmcdn.com/basscss@8.0.1/css/basscss.min.css" rel="stylesheet">
 
