--- a/_sass/_blockquotes.scss
+++ b/_sass/_blockquotes.scss
@@ -1,16 +1,62 @@
-blockquote {
-  border-left: 5px solid #7a7a7a;
-  font-style: italic;
-  margin-left: $space-1;
-  padding: $space-1;
+
+blockquote{
+  display:block;
+  background: #fff;
+  padding: 15px 20px 15px 45px;
+  margin: 0 0 20px;
+  position: relative;
+  
+  /*Font*/
+  // font-family: Georgia, serif;
+  font-family: 'Patrick Hand SC', cursive;
+  font-size: 20px;
+  // font-weight: 400 !default;
+  line-height: 1.2;
+  color: #666;
+  text-align: justify;
+  
+  /*Borders - (Optional)*/
+  border-left: 15px solid #c76c0c;
+  border-right: 2px solid #c76c0c;
+  
+  /*Box Shadow - (Optional)*/
+  -moz-box-shadow: 2px 2px 15px #ccc;
+  -webkit-box-shadow: 2px 2px 15px #ccc;
+  box-shadow: 2px 2px 15px #ccc;
 }
 
-blockquote footer {
-  background-color: #fff;
-  border-color: transparent;
-  color: #7a7a7a;
-  font-size: .85rem;
-  font-style: normal;
-  text-align: left;
-  padding: 0;
+blockquote::before{
+  content: "\201C"; /*Unicode for Left Double Quote*/
+  
+  /*Font*/
+  font-family: Georgia, serif;
+  font-size: 60px;
+  font-weight: bold;
+  color: #999;
+  
+  /*Positioning*/
+  position: absolute;
+  left: 10px;
+  top:5px;
+}
+
+blockquote::after{
+  /*Reset to make sure*/
+  content: "";
+}
+
+blockquote a{
+  text-decoration: none;
+  background: #eee;
+  cursor: pointer;
+  padding: 0 3px;
+  color: #c76c0c;
+}
+
+blockquote a:hover{
+ color: #666;
+}
+
+blockquote em{
+  // font-style: italic;
 }
