--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,7 +5,7 @@ $bold-font-weight: bold !default;
 $font-family: 'Noto Serif', serif;
 $line-height: 1.5 !default;
 //$heading-font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif !default;
-$heading-font-family: 'Noto Serif', serif;
+$heading-font-family: 'Quicksand', sans-serif;
 $heading-font-weight: 400 !default;
 $heading-line-height: 1.25 !default;
 $monospace-font-family: 'Source Code Pro', Consolas, monospace !default;
