--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,11 +13,11 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ "/css/doanguyen.css" | prepend: site.baseurl }}?{{ site.time | date: "%Y%m%d%H%M" }}" type="text/css">
 
-    <!-- Fonts 
+    <!-- Fonts
     <link href='//fonts.googleapis.com/css?family=Merriweather:900,900italic,300,300italic' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Lato:900,300' rel='stylesheet' type='text/css'>-->
 	<!-- <link href='//fonts.googleapis.com/css?family=Noto+Serif:400,400i&subset=latin,vietnamese' rel='stylesheet' type='text/css'> -->
-    <link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC|Quicksand:300,400&amp;subset=vietnamese" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Delius|Quicksand:300,400&amp;subset=vietnamese" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="//npmcdn.com/basscss@8.0.1/css/basscss.min.css" rel="stylesheet">
 
@@ -46,7 +46,7 @@
     <link rel="shortcut icon" type="image/png" href="icons/favicon.png" sizes="256x256">
     <link rel="shortcut icon" type="image/png" href="icons/favicon-256x256.png" sizes="256x256">
 
-        
+
     {% if site.google_analytics %}
     <script type="text/javascript">
       var _gaq = _gaq || [];
@@ -58,5 +58,9 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
     </script>
+    {% endif %}
+
+    {% if site.mathjax %}
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
     {% endif %}
 </head>
