--- a/_sass/_blockquotes.scss
+++ b/_sass/_blockquotes.scss
@@ -8,7 +8,7 @@ blockquote{
 
   /*Font*/
   // font-family: Georgia, serif;
-  font-family: 'Delius', cursive;
+  // font-family: 'Delius', cursive;
   font-size: 20px;
   // font-weight: 400 !default;
   line-height: 1.2;
