--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
 	<meta name="msvalidate.01" content="AAF1839A763BCBD427E1038B41C34028" />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ "/css/doanguyen.css" | prepend: site.baseurl }}?{{ site.time | date: "%Y%m%d%H%M" }}" type="text/css">
+    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}?{{ site.time | date: "%Y%m%d%H%M" }}" type="text/css">
 
     <!-- Fonts
     <link href='//fonts.googleapis.com/css?family=Merriweather:900,900italic,300,300italic' rel='stylesheet' type='text/css'>
