--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
     <link href='//fonts.googleapis.com/css?family=Merriweather:900,900italic,300,300italic' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Lato:900,300' rel='stylesheet' type='text/css'>-->
 	<!-- <link href='//fonts.googleapis.com/css?family=Noto+Serif:400,400i&subset=latin,vietnamese' rel='stylesheet' type='text/css'> -->
-    <link href="https://fonts.googleapis.com/css?family=Delius|Quicksand:300,400&amp;subset=vietnamese" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Delius|Quicksand:300,400&amp;subset=vietnamese" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="//npmcdn.com/basscss@8.0.1/css/basscss.min.css" rel="stylesheet">
 
