--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -3,11 +3,14 @@
 html, body {
   height: auto;
   min-height: 100%;
+  font-family: Palatino, Times;
+  line-height: 1.4;
 }
 
 img {
   width: auto;
   max-width: 100%;
+
 }
 
 body {
