Add InterUI font

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -3,7 +3,7 @@
 html, body {
   height: auto;
   min-height: 100%;
-  font-family: Palatino, Times;
+  font-family: "Inter UI", Palatino, Times, serif;
   line-height: 1.4;
 }
 
