--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -118,3 +118,6 @@ $footer-color: #7a7a7a;
 $footer-bg-color: #fafafa;
 $footer-font-weight: 300;
 $footer-font-size: .75rem;
+
+// Typography
+$base-typo-font-size: 0.9rem;
